--- a/src/Bundle/Sucrose.Bundle/Showcase/Fluid Simulation-1/Fluid.html
+++ b/src/Bundle/Sucrose.Bundle/Showcase/Fluid Simulation-1/Fluid.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="Cache-Control" content="no-cache">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
-        <link rel="apple-touch-icon" href="./img/logo.png">
+        <meta charset="utf-8" />
         <link rel="icon" href="./img/logo.png">
+        <link rel="apple-touch-icon" href="./img/logo.png">
+        <meta name="mobile-web-app-capable" content="yes" />
+        <meta http-equiv="Cache-Control" content="no-cache" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         <title>WebGL Fluid Simulation</title>
-        <meta name="description" content="A WebGL fluid simulation that works in mobile browsers.">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Webgl Fluid Simulation">
-        <meta property="og:description" content="A WebGL fluid simulation that works in mobile browsers.">
+        <meta name="description" content="A WebGL fluid simulation that works in mobile browsers." />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Webgl Fluid Simulation" />
+        <meta property="og:description" content="A WebGL fluid simulation that works in mobile browsers." />
         <script type="text/javascript" src="./js/dat.gui.min.js"></script>
         <style>
             * {
@@ -31,7 +31,9 @@
                 position: fixed;
                 width: 100%;
                 height: 100%;
+                background-repeat: no-repeat;
                 background-size: 100% 100%;
+                background-position: center;
             }
 
             canvas {
@@ -39,65 +41,35 @@
                 height: 100%;
             }
 
-            .dg {
-                opacity: 0.9;
+            #videoBackground {
+                position: absolute;
+                z-index: -1;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                object-fit: fill;
             }
 
-            .dg .property-name {
-                overflow: visible;
-            }
-
-            @font-face {
-                font-family: 'iconfont';
-                src: url('iconfont.ttf') format('truetype');
-            }
-
-            .bigFont {
-                font-size: 150%;
-                color: #8C8C8C;
-            }
-
-            .cr.function.appBigFont {
-                font-size: 150%;
-                line-height: 27px;
-                color: #A5F8D3;
-                background-color: #023C40;
-            }
-
-            .cr.function.appBigFont .property-name {
-                float: none;
-            }
-
-            .cr.function.appBigFont .icon {
-                position: sticky;
-                bottom: 27px;
-            }
-
-            .icon {
-                font-family: 'iconfont';
-                font-size: 130%;
-                float: right;
-            }
-
-            .twitter:before {
-                content: 'a';
-            }
-
-            .github:before {
-                content: 'b';
-            }
-
-            .app:before {
-                content: 'c';
-            }
-
-            .discord:before {
-                content: 'd';
+            #overlay {
+                pointer-events: none;
+                position: fixed;
+                width: 25%;
+                height: 25%;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-size: contain;
+                background-position: center;
+                background-repeat: no-repeat;
             }
         </style>
     </head>
     <body>
         <canvas></canvas>
-        <script src="./js/script.js"></script>
+        <video id="videoBackground" muted loop></video>
+        <div id="overlay"></div>
     </body>
+    <script src="./js/script.js"></script>
 </html>
