Editing GitHub Page

--- a/.pages/index.html
+++ b/.pages/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sucrose Wallpaper Engine</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-900 text-white">
     <!-- Header Section -->
@@ -42,11 +44,11 @@
 
         <!-- Content -->
         <div class="container mx-auto px-6 py-24 text-center relative z-30" data-aos="fade-up">
-            <h1 class="text-5xl md:text-7xl font-bold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600 animate-gradient-text">
+            <h1 style="line-height: 1.4" class="text-5xl md:text-7xl font-bold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600 animate-gradient-text">
                 Sucrose Wallpaper Engine
             </h1>
             <p class="text-xl md:text-2xl text-gray-300 mb-12 max-w-3xl mx-auto">
-                Transform your desktop with stunning, dynamic wallpapers that bring your screen to life
+                Sucrose is a versatile wallpaper engine that brings life to your desktop with a wide range of interactive wallpapers.
             </p>
             <div class="flex flex-col md:flex-row gap-6 justify-center items-center">
                 <a href="https://apps.microsoft.com/detail/XP8JGPBHTJGLCQ?launch=true&mode=full" target="_blank" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-4 px-8 rounded-full inline-block transition-all transform hover:scale-105 hover:shadow-lg hover:shadow-purple-500/25">
@@ -212,19 +214,19 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="py-12 text-center text-gray-400">
-        <div class="container mx-auto px-6">
-            <p> 2024 Sucrose Wallpaper Engine. All rights reserved.</p>
-        </div>
-    </footer>
-
     <!-- Scroll to Top Button -->
     <button id="scrollToTop" class="fixed bottom-8 right-8 bg-purple-600 hover:bg-purple-700 text-white p-3 rounded-full shadow-lg transition-all transform hover:scale-110 opacity-0 invisible z-50">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" />
         </svg>
     </button>
+
+    <!-- Footer -->
+    <footer class="py-12 text-center text-gray-400">
+        <div class="container mx-auto px-6">
+            <p> 2024 Sucrose Wallpaper Engine. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="script.js"></script>
