--- a/.pages/index.html
+++ b/.pages/index.html
@@ -64,7 +64,7 @@
     <!-- Features Section -->
     <section id="features" class="py-24 bg-gray-800">
         <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center mb-16" data-aos="fade-up">Features</h2>
+            <h2 class="text-4xl font-bold text-center mb-16" data-aos="fade-up">Sucrose Features</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
                 <div class="p-6 rounded-xl bg-gray-700/50 backdrop-blur-lg" data-aos="fade-up" data-aos-delay="100">
                     <div class="text-purple-500 text-4xl mb-4">🎨</div>
@@ -118,7 +118,7 @@
     <!-- Gallery Section -->
     <section id="gallery" class="py-24">
         <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold text-center mb-16" data-aos="fade-up">Application Screenshots</h2>
+            <h2 class="text-4xl font-bold text-center mb-16" data-aos="fade-up">Sucrose Screenshots</h2>
 
             <!-- Main Screenshot Display -->
             <div class="mb-16">
@@ -138,7 +138,7 @@
             <!-- Slider Gallery -->
             <div class="relative overflow-hidden" data-aos="fade-up" data-aos-delay="100">
                 <!-- Container for proper button alignment -->
-                <div class="flex items-center"> <!-- Bu div eklendi -->
+                <div class="flex items-center">
                     <!-- Navigation Button (Left) -->
                     <button class="z-10 flex-shrink-0 bg-gray-900/80 hover:bg-gray-800 text-white p-3 rounded-full backdrop-blur-sm" onclick="slideGallery('left')">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -224,7 +224,7 @@
     <!-- Footer -->
     <footer class="py-12 text-center text-gray-400">
         <div class="container mx-auto px-6">
-            <p> 2024 Sucrose Wallpaper Engine. All rights reserved.</p>
+            <p> Copyright ©2024 Sucrose Wallpaper Engine. All rights reserved.</p>
         </div>
     </footer>
 
