--- a/.pages/index.html
+++ b/.pages/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="aos.css">
         <title>Sucrose Wallpaper Engine</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="stylesheet" href="tailwind.min.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body class="bg-gray-900 text-white">
         <!-- Header Section -->
@@ -194,10 +194,10 @@
         <!-- Footer -->
         <footer class="py-12 text-center text-gray-400">
             <div class="container mx-auto px-6">
-                <p> Copyright ©2024 Sucrose Wallpaper Engine. All rights reserved.</p>
+                <p> Copyright ©2025 Sucrose Wallpaper Engine. All rights reserved.</p>
             </div>
         </footer>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+        <script src="aos.js"></script>
         <script src="script.js"></script>
         <!-- Microsoft Clarity -->
         <script type="text/javascript">
